Package: R.filesets
===================

Version: 2.0.0 [2013-01-16]
o Added a default readDataFrame() for reading data from a tabular
  text file utilizing the TabularTextFile class.


Version: 1.9.0 [2012-12-20]
o Argument 'colClassPatterns' of readDataFrame() for TabularTextFile
  has been renamed to 'colClasses'.


Version: 1.8.2 [2012-12-19]
o Bumped up package dependencies.
o Utilizing new startupMessage() of R.oo.
o ROBUSTNESS: Now indexOf() for GenericDataFileSet throws an 
  exception if use tries to pass an argument 'names'.


Version: 1.8.1 [2012-12-09]
o Added head() and tail() for GenericTabularFile.
o Added subsetting via [() to GenericTabularFile.
o BUG FIX: nbrOfRows() for TabularTextFile forgot to exclude comment
  rows in the file header.
o BUG FIX: readColumns() for GenericTabularFile would not preserve
  the order of the requested 'columns'.


Version: 1.8.0 [2012-12-06]
o Added getOneFile() for GenericDataFileSet, which returns the first
  GenericDataFile with a non-missing pathname.
o Added argument 'absolute=FALSE' to getPathname() for GenericDataFile.
o ROBUSTNESS: Now GenericDataFile stores the absolute pathname of
  the file, even if a relative pathname is given.  This makes sure
  that the file is found also when the working directory is changed.
o BUG FIX: equals() for GenericDataFileSet would only compare the first
  GenericDataFile in each set.


Version: 1.7.3 [2012-12-03]
o Added isGzipped() to GenericDataFile.


Version: 1.7.2 [2012-12-03]
o Generalized writeColumnsToFiles() to GenericTabularFile.  Used
  to be available only for TabularTextFile.
o CLEANUP: Now package only imports 'digest' and 'R.methodsS3'.
  Added 'stats' to list of imported packages.
o ROBUSTNESS: Now package declares S3 methods in the namespace.


Version: 1.7.1 [2012-12-02]
o BUG FIX: getDefaultColumnNames() for TabularTextFile did not use
  'columnNames' if it was set when creating the TabularTextFile object.