@@ -4,6 +4,9 @@ Package: R.filesets
 Version: 2.0.0 [2013-01-16]
 o Added a default readDataFrame() for reading data from a tabular
   text file utilizing the TabularTextFile class.
+o Now argument 'skip' to TabularTextFile and readDataFrame() for
+  that class causes the parser to skip that many lines including
+  commented lines, whereas before it did not count commented lines.
 
 
 Version: 1.9.0 [2012-12-20]
